brand page updated

--- a/task6/components/hero.html
+++ b/task6/components/hero.html
@@ -1,5 +1,5 @@
 <section
-  class="relative overflow-hidden pt-28 pb-40 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
+  class="relative overflow-hidden pt-32 pb-52 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
 >
   <div
     class="absolute -left-40 -top-40 w-[600px] h-[600px] bg-[#7B1FA2] rounded-full blur-[100px] opacity-50"
@@ -76,9 +76,11 @@
   </svg>
 
   <div
-    class="absolute bottom-0 left-0 right-0 h-36 bg-white"
-    style="clip-path: ellipse(80% 60% at 50% 100%)"
+    class="absolute -bottom-32 left-0 right-0 h-48 bg-white"
+    style="clip-path: ellipse(80% 50% at 50% 100%)"
   ></div>
+
+  %
 </section>
 
 <!-- <svg
